[package]
name = "actix-server"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
env_logger = "0.10.0"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
anyhow = "1.0.71"
rand = "0.8.5"
tokio = { version = "1.20.1", default-features = false, features = ["rt"] }
mongodb = "2.6.0"
hex = "0.4.3"
uuid = "1.4.0"

[lib]
name = "server"
path = "src/lib.rs"
